codex-rs/tui/src/snapshots/codex_tui__pager_overlay__tests__pager_percentage_tiny_widths.snap
---
source: tui/src/pager_overlay.rs
expression: "format!(\"width 6:\\n{width_six}\\nwidth 7:\\n{width_seven}\")"
---
width 6:

──────

width 7:

 100% ─
