codex-rs/tui/src/snapshots/codex_tui__pager_overlay__tests__static_overlay_compact_height_3.snap
---
source: tui/src/pager_overlay.rs
expression: height_three
---
/ S T A T I C / / / / / / / / / / / / /
static sentinel
 q close
