codex-rs/tui/src/snapshots/codex_tui__pager_overlay__tests__static_overlay_compact_height_5.snap
---
source: tui/src/pager_overlay.rs
expression: height_five
---
/ S T A T I C / / / / / / / / / / / / /
static sentinel
─────────────────────────────────── 0% ─
 ↑/↓ to scroll   pgup/pgdn to page   hom
 q close
