codex-rs/tui/src/snapshots/codex_tui__pager_overlay__tests__transcript_overlay_compact_height_3.snap
---
source: tui/src/pager_overlay.rs
expression: height_three
---
/ T R A N S C R I P T / / / / / / / / /
transcript sentinel
 q close   esc to edit prev
