codex-rs/tui/src/snapshots/codex_tui__pager_overlay__tests__transcript_overlay_compact_height_5.snap
---
source: tui/src/pager_overlay.rs
expression: height_five
---
/ T R A N S C R I P T / / / / / / / / /
transcript sentinel
───────────────────────────────── 100% ─
 ↑/↓ to scroll   pgup/pgdn to page   hom
 q close   esc to edit prev
